# melior

./: Cargo.toml
macro/: Cargo.toml
melior/: Cargo.toml
melior/src/: context.rs
melior/src/dialect/: memref.rs
melior/src/ir/attribute/: attribute_like.rs  string.rs
melior/src/pass/: conversion.rs  linalg.rs
