[package]
name = "melior-macro"
description = "Internal macros for Melior"
version = "0.11.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
readme = "../README.md"
keywords = ["mlir", "llvm"]

[lib]
proc-macro = true

[dependencies]
comrak = { version = "0.28.0", default-features = false }
convert_case = "0.6.0"
once_cell = "1.19.0"
proc-macro2 = "1"
quote = "1"
regex = "1.10.6"
syn = { version = "2", features = ["full"] }
tblgen = { git = "https://github.com/lambdaclass/tblgen-rs", branch = "llvm19" }
unindent = "0.2.3"

[dev-dependencies]
melior = { path = "../melior", features = ["ods-dialects"] }
mlir-sys = { workspace = true }
pretty_assertions = "1.4.1"
