[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.18.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
keywords = ["mlir", "llvm"]

[features]
ods-dialects = []

[dependencies]
dashmap = "6.1.0"
melior-macro = { path = "../macro" }
mlir-sys = { workspace = true }
once_cell = "1"

[dev-dependencies]
indoc = "2.0.5"
insta = "1.40.0"
pretty_assertions = "1.4.1"
